apps/base/better-booking-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: better-booking-bot
  namespace: better-booking-bot
spec:
  selector:
    app: better-booking-bot
  ports:
    - port: 80
      targetPort: 8080
